--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,9 +10,8 @@
         <div class="col-md-6">
             <h2 class="text-center mb-4">Login</h2>
 
-            <!-- Success message -->
-            <div th:if="${successMessage}" class="alert alert-success" role="alert">
-                <p th:text="${successMessage}"></p>
+            <div th:if="${param.error}" class="alert alert-danger" role="alert">
+                아이디 비밀번호가 일치하지 않습니다.
             </div>
 
             <form th:action="@{/login}" method="post">
