--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -57,7 +57,7 @@
 </head>
 <body>
 <div class="container chat-container">
-    <h2 class="mb-3">Welcome, <span sec:authentication="name"></span>!</h2>
+    <h2 class="mb-3">안녕하세요 <span sec:authentication="name"></span>님</h2>
     <div class="btn-group-full">
         <form th:action="@{/logout}" method="post">
             <button type="submit" class="btn btn-danger">Logout</button>
