게임 임시 주석

--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -62,9 +62,9 @@
         <form th:action="@{/logout}" method="post">
             <button type="submit" class="btn btn-danger">Logout</button>
         </form>
-        <form th:action="@{/shooting}" method="get">
-            <button type="submit" class="btn btn-danger">Shooting Game</button>
-        </form>
+<!--        <form th:action="@{/shooting}" method="get">-->
+<!--            <button type="submit" class="btn btn-danger">Shooting Game</button>-->
+<!--        </form>-->
     </div>
 
     <div id="chat-page">
