--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -35,7 +35,7 @@
 <body>
 <div class="container mt-5">
     <div class="login-container">
-        <h2 class="text-center mb-4">Login</h2>
+        <h2 class="text-center mb-4">채팅프로그램</h2>
 
         <div th:if="${param.error}" class="alert alert-danger" role="alert">
             아이디 비밀번호가 일치하지 않습니다.
@@ -43,17 +43,17 @@
 
         <form th:action="@{/login}" method="post">
             <div class="form-group">
-                <label for="username">Username:</label>
+                <label for="username">아이디</label>
                 <input type="text" id="username" name="username" class="form-control" required>
             </div>
             <div class="form-group">
-                <label for="password">Password:</label>
+                <label for="password">비밀번호</label>
                 <input type="password" id="password" name="password" class="form-control" required>
             </div>
-            <button type="submit" class="btn btn-primary btn-block">Login</button>
+            <button type="submit" class="btn btn-primary btn-block">로그인하기</button>
         </form>
         <div class="mt-3 text-center">
-            <a th:href="@{/register}" class="btn btn-link">Register</a>
+            <a th:href="@{/register}" class="btn btn-link">회원가입하기</a>
         </div>
     </div>
 </div>
