--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -35,21 +35,21 @@
 <body>
 <div class="container mt-5">
     <div class="register-container">
-        <h2 class="text-center mb-4">Register</h2>
+        <h2 class="text-center mb-4">회원입하기</h2>
         <form th:action="@{/register}" method="post">
             <div class="form-group">
-                <label for="username">Username:</label>
+                <label for="username">아이디</label>
                 <input type="text" id="username" name="username" class="form-control" required>
             </div>
             <div class="form-group">
-                <label for="password">Password:</label>
+                <label for="password">비밀번호</label>
                 <input type="password" id="password" name="password" class="form-control" required>
             </div>
-            <button type="submit" class="btn btn-primary btn-block">Register</button>
+            <button type="submit" class="btn btn-primary btn-block">가입하기</button>
         </form>
-        <div class="mt-3 text-center">
-            <a th:href="@{/login}" class="btn btn-link">Login</a>
-        </div>
+<!--        <div class="mt-3 text-center">-->
+<!--            <a th:href="@{/login}" class="btn btn-link">Login</a>-->
+<!--        </div>-->
     </div>
 </div>
 
