--- a/src/main/resources/templates/chatRoomList.html
+++ b/src/main/resources/templates/chatRoomList.html
@@ -38,6 +38,9 @@
 <body>
 <div class="container-fluid mt-3 mb-5">
     <h2 class="text-center mb-3">채팅방리스트</h2>
+    <div class="d-flex justify-content-between align-items-center mb-4">
+        <a href="/profile" class="btn btn-primary">프로필 수정하기</a>
+    </div>
     <div class="chat-rooms">
         <div class="room-item" th:each="room : ${chatRooms}">
             <a th:href="@{'/chat/' + ${room.name}}" th:text="${room.name}" class="room-name"></a>
