--- a/src/main/resources/templates/chatRoomList.html
+++ b/src/main/resources/templates/chatRoomList.html
@@ -41,6 +41,9 @@
     <div class="d-flex justify-content-between align-items-center mb-4">
         <a href="/profile" class="btn btn-primary">프로필 수정하기</a>
     </div>
+    <div class="d-flex justify-content-between align-items-center mb-4">
+        <a href="/stock" class="btn btn-primary">주식보러가기</a>
+    </div>
     <div class="chat-rooms">
         <div class="room-item" th:each="room : ${chatRooms}">
             <a th:href="@{'/chat/' + ${room.name}}" th:text="${room.name}" class="room-name"></a>
