주식서비스 시작2

--- a/src/main/resources/templates/stock-detail.html
+++ b/src/main/resources/templates/stock-detail.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h1>Stock Information</h1>
-<pre th:text="${stockData}"></pre>
+<!--<pre th:text="${stockData}"></pre>-->
 <a href="/stock">Back to Search</a>
 </body>
 </html>
