젠킨스테스트

--- a/src/main/resources/templates/stock.html
+++ b/src/main/resources/templates/stock.html
@@ -83,6 +83,9 @@
 </div>
 
 <script>
+
+  console.log("test@@");
+
   async function fetchStockData() {
     const stockName = document.getElementById('stockNameInput').value.trim();
     if (!stockName) {
