젠킨스테스트2

--- a/src/main/resources/templates/stock.html
+++ b/src/main/resources/templates/stock.html
@@ -84,7 +84,7 @@
 
 <script>
 
-  console.log("test@@");
+  console.log("test@@@");
 
   async function fetchStockData() {
     const stockName = document.getElementById('stockNameInput').value.trim();
